--- a/public/index.html
+++ b/public/index.html
@@ -107,12 +107,11 @@
           <p>Physical Bitcoins will go on sale soon. But till then, enter your email address to stay updated! </p>
         </div>
         <div class="col-md-6">
-          <form>
+          <form action="/interested" method="POST">
             <div class="form-group">
               <label> Email </label>
-                <input type="text" class="form-control" placeholder="jow@blob.com">
+                <input type="text" name="email" class="form-control" placeholder="jow@blob.com">
             </div>
-
             <button type="submit" class="btn btn-success"> Stay Updated! </button>
           </form>
         </div>
