--- a/public/index.html
+++ b/public/index.html
@@ -68,15 +68,8 @@
 
 
     <div class="stepsBlock" style="padding-bottom: 150px">
-      <div class="row">
-        <div class="col-md-4">
-          <p> LOL </p>
-        </div>
-        <div class="col-md-8">
           <h3> Play with the model! </h3>
-          <img src="http://thingiverse-rerender.s3.amazonaws.com/renders/93/81/3a/45/d3/bitcoin_preview_featured.jpg">
-        </div>
-      </div>
+          <div id="viewer" style="width:100%;height:800px"></div>
     </div>
 
 
@@ -124,5 +117,22 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="/components/jquery/dist/jquery.js"></script>
     <script src="/components/bootstrap/dist/js/bootstrap.min.js"></script>
+
+    <script src="/components/thingiview.js/javascripts/Three.js"></script>
+    <script src="/components/thingiview.js/javascripts/plane.js"></script>
+    <script src="/components/thingiview.js/javascripts/thingiview.js"></script>
+
+    <script>
+      window.onload = function() {
+        thingiurlbase = "/components/thingiview.js/javascripts";
+        thingiview = new Thingiview("viewer");
+        thingiview.setObjectColor('#C0D8F0');
+        thingiview.initScene();
+        thingiview.loadSTL("/components/thingiview.js/examples/objects/cube.stl");
+      }
+    </script>
+
+
+
   </body>
 </html>
